[gd_scene load_steps=2 format=3 uid="uid://5kcvuixub80q"]

[ext_resource type="Script" uid="uid://cox22j3k8a4da" path="res://scripts/menu.gd" id="1_xdvgc"]

[node name="Menu" type="Node2D"]
script = ExtResource("1_xdvgc")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Label" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -335.5
offset_top = -480.0
offset_right = 335.5
offset_bottom = -305.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 128
text = "Dino Mafia"

[node name="PlayButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -165.0
offset_top = -48.0
offset_right = 165.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 64
text = "Play"

[node name="SettingsButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -165.0
offset_top = 142.5
offset_right = 165.0
offset_bottom = 238.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 64
text = "Settings"

[node name="QuitButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -165.0
offset_top = 333.0
offset_right = 165.0
offset_bottom = 429.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 64
text = "Quit"

[node name="ScreenshakeToggle" type="CheckBox" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 433.0
offset_top = -224.0
offset_right = 657.0
offset_bottom = -171.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
button_pressed = true
text = "Screenshake"

[node name="KeybindsLabel" type="Label" parent="."]
offset_left = -940.0
offset_top = 475.0
offset_right = -279.0
offset_bottom = 520.0
theme_override_font_sizes/font_size = 32
text = "WASD to move, LMB to shoot, ESC to pause"

[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="ScreenshakeToggle" to="." method="_on_screenshake_toggle_pressed"]
